--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     <br>
     <a href="https://privacybadger.org/" >Privacy Badger </a>
     <br>
-    <a href="./Education.html">MY EDUCATION QUALIFATION</a>
+    <a href="/Education.html">MY EDUCATION QUALIFATION</a>
 </body>
 </html>
